--- a/ccd.ini
+++ b/ccd.ini
@@ -61,3 +61,10 @@ connectScript _abc  = { retry 3 {
 connectScript _NDCdirect = { transmit "CCD^M" delay 1 transmit "^M"  return 0 }
 
 connectScript _direct = { transmit "CCD^M"  return 0 }
+
+network DUMMY
+begin
+  primary connection
+  begin
+  end
+end
